syntax = "proto3";

package lockstep.roomservice;

option go_package = "github.com/O-Keh-Hunter/kcp2k-go/lockstep/proto";


// 错误码定义
enum ErrorCode {
    ERROR_CODE_SUCC = 0;              // 成功
    ERROR_CODE_UNKNOWN = 1;           // 未知错误
}

// 统一响应基类
message BaseResponse {
    ErrorCode error_code = 1;      // 错误码
    string error_message = 2;      // 错误描述（可选，调试用）
}

// 房间服务
service RoomService {
  // 创建房间
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
}

// 创建房间请求
message CreateRoomRequest {
  RoomConfig room_config = 1;   // 房间配置
  repeated int32 player_ids = 2; // 指定玩家ID列表
}

// 房间配置
message RoomConfig {
  int32 max_players = 1;          // 最大玩家数
  int32 min_players = 2;          // 最小玩家数
  int32 frame_rate = 3;           // 帧率
  int32 retry_window = 4;         // 重试窗口
}

// 创建房间响应
message CreateRoomResponse {
  BaseResponse base = 1; // 基础响应
  string room_id = 2;    // 房间ID
}
 